--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -1,30 +1,21 @@
+<h1>Listing ideas</h1>
 
-<h1>Listing Ideas</h1>
+<% @ideas.in_groups_of(3) do |group| %>
+  <div class="row">
+    <% group.compact.each do |idea| %>
+      <div class="idea col-md-4">
+        <div class="idea__image_wrapper">
+          <%= image_tag idea.picture_url, width: '100%' if idea.picture.present?%>
+        </div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Picture</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+        <h4>
+          <%= link_to idea.name, idea %>
+        </h4>
 
-  <tbody>
-    <% @ideas.each do |idea| %>
-      <tr>
-        <td><%= idea.name %></td>
-        <td><%= idea.description %></td>
-        <td><%= image_tag(idea.picture_url, :width => 100) if idea.picture.present? %></td>
-        <td><%= link_to 'Show', idea %></td>
-        <td><%= link_to 'Edit', edit_idea_path(idea) %></td>
-        <td><%= link_to 'Destroy', idea, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+        <%= idea.description %>
+      </div>
     <% end %>
-  </tbody>
-</table>
-
-<br>
+  </div>
+<% end %>
 
 <%= link_to 'New Idea', new_idea_path %>
